# im-operator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_ANALYSIS_REPORT.md  Directory.Build.props  _check_raw.ps1  _verify_analysis.ps1  build.ps1  build_cuda.ps1
.github/workflows/: ci.yml
benchmarks/: benchmark.cpp
docs/: API_Reference.md  Operator_Development_Guide.md  PRISM_Algorithm_Design.docx  PRISM_Algorithm_Design_v2.docx
examples/: demo.cpp
include/: black_level.h  calibration.h  ccm.h  color_calibration.h  color_temp.h  defect_correct.h  denoise.h  hdr.h  highlight_reconstruct.h  im_operator.h  jpeg_codec.h  lens_shading.h  local_contrast.h  lut.h  saturation.h  sharpen.h  tone.h  white_balance.h
include/black_level/: algorithms.hpp  types.hpp
include/calibration/: algorithms.hpp  types.hpp
include/ccm/: algorithms.hpp  types.hpp
include/color_calibration/: algorithms.hpp  types.hpp
include/color_temp/: algorithms.hpp  types.hpp
include/defect_correct/: algorithms.hpp  types.hpp
include/denoise/: algorithms.hpp  types.hpp
include/hdr/: algorithms.hpp  types.hpp
include/highlight_reconstruct/: algorithms.hpp  types.hpp
include/imop/: algorithms.hpp  analyzer.hpp  pixel_utils.hpp  types.hpp
include/jpeg_codec/: algorithms.hpp  types.hpp
include/lens_shading/: algorithms.hpp  types.hpp
include/local_contrast/: algorithms.hpp  types.hpp
include/lut/: algorithms.hpp  types.hpp
include/saturation/: algorithms.hpp  types.hpp
include/sharpen/: algorithms.hpp  types.hpp
include/tone/: algorithms.hpp  types.hpp
include/white_balance/: algorithms.hpp  types.hpp
simple/: API_REFERENCE.md  CMakeLists.txt  analyzer_example.cpp  black_level_example.cpp  calibration_example.cpp  ccm_example.cpp  color_temp_example.cpp  defect_correct_example.cpp  demosaic_example.cpp  denoise_example.cpp  hdr_example.cpp  highlight_reconstruct_example.cpp  jpeg_codec_example.cpp  lens_shading_example.cpp  local_contrast_example.cpp  lut_example.cpp  pixel_utils_example.cpp  saturation_example.cpp  sharpen_example.cpp  tone_example.cpp  white_balance_example.cpp
src/: analyzer.cpp  gpu_common.cuh  gpu_dispatch.cpp  gpu_ops_kernels.cu  gpu_ops_kernels.cuh
src/algorithms/: ahd.cpp  amaze.cpp  avx2.cpp  common.hpp  cuda_dispatch.cpp  cuda_kernels.cu  cuda_kernels.cuh  dfpd.cpp  dispatch.cpp  hqli.cpp  interp_core.hpp  l7.cpp  mg.cpp  optimized.hpp  prism.cpp  rcd.cpp  super_fast.cpp
src/black_level/: common.hpp  dispatch.cpp  global.cpp  per_channel.cpp
src/calibration/: bundle_adjust.cpp  calib_kernels.cu  calib_kernels.cuh  camera_graph.cpp  checkerboard_calibrate.cpp  checkerboard_detect.cpp  common.hpp  cuda_dispatch.cpp  dispatch.cpp  dlt.cpp  incremental_sfm.cpp  pnp_solver.cpp  right_triangle.cpp  sparse_ba.cpp  stereo_calibrate.cpp  three_point.cpp
src/ccm/: common.hpp  dispatch.cpp  linear_3x3.cpp  linear_4x3.cpp  manual.cpp  polynomial_3x9.cpp
src/color_calibration/: common.cpp  common.hpp  detect_chart.cpp  extract_patches.cpp  generate_linearization.cpp  solve_ccm.cpp
src/color_temp/: common.hpp  dispatch.cpp  kelvin.cpp  manual_temp.cpp  preset.cpp  temperature.cpp  white_balance_auto.cpp
src/defect_correct/: adaptive.cpp  common.hpp  dispatch.cpp  map_based.cpp
src/denoise/: bayer_denoise.cpp  bilateral.cpp  common.hpp  dispatch.cpp  gaussian.cpp  median.cpp  nlm.cpp  wavelet.cpp
src/hdr/: adaptive_local.cpp  common.hpp  cuda_dispatch.cpp  dispatch.cpp  drago.cpp  exponential.cpp  filmic_aces.cpp  hable.cpp  hdr_kernels.cu  hdr_kernels.cuh  logarithmic.cpp  reinhard.cpp  reinhard_ext.cpp  transfer.cpp
src/highlight_reconstruct/: channel_guided.cpp  common.hpp  dispatch.cpp  gradient_based.cpp
src/jpeg_codec/: common.hpp  cuda_dispatch.cpp  decode_baseline.cpp  dispatch.cpp  encode_baseline.cpp  jpeg_codec_kernels.cu  jpeg_codec_kernels.cuh
src/lens_shading/: common.hpp  dispatch.cpp  flat_field.cpp  polynomial.cpp
src/local_contrast/: bilateral.cpp  common.hpp  dispatch.cpp  unsharp.cpp
src/lut/: common.hpp  core.cpp  cube_file.cpp  custom_3d.cpp  dispatch.cpp  preset_styles.cpp  style_presets.cpp
src/saturation/: channel_mixer.cpp  common.hpp  dispatch.cpp  hsl.cpp  selective.cpp  vibrance.cpp
src/sharpen/: adaptive.cpp  common.hpp  dispatch.cpp  high_pass.cpp  laplacian.cpp  unsharp_mask.cpp
src/tone/: common.hpp  curves_3point.cpp  dispatch.cpp  gamma.cpp  levels.cpp  s_curve.cpp  shadows_highlights.cpp
src/white_balance/: common.hpp  dispatch.cpp  gray_world.cpp  manual.cpp  shade_of_gray.cpp  white_patch.cpp
test_data/: Image_20260510144219156_w1006_h758_pBayerRG10.raw  Image_20260510144302933_w1006_h758_pBayerRG8.raw  Image_20260510144315897_w1006_h758_pBayerRG12.raw  Image_20260510144329680_w1006_h758_pBayerRG10_Packed.raw  Image_20260510144339211_w1006_h758_pBayerRG12_Packed.raw
tests/unit/: test_algorithms.cpp  test_black_level.cpp  test_calibration.cpp  test_ccm.cpp  test_color_calibration.cpp  test_color_temp.cpp  test_correctness.cpp  test_defect_correct.cpp  test_denoise.cpp  test_dispatch.cpp  test_hdr.cpp  test_highlight_reconstruct.cpp  test_jpeg_codec.cpp  test_lens_shading.cpp  test_local_contrast.cpp  test_lut.cpp  test_pixel_utils.cpp  test_saturation.cpp  test_sharpen.cpp  test_tone.cpp  test_types.cpp  test_white_balance.cpp
tools/: cuda_roof.cpp  cuda_test_minimal.cpp  cuda_verify.cpp  dct_test.cpp  denoise_synthetic_test.cpp  folder_data_debayer.cpp  gpu_dct_test.cu  gpu_jpeg_bench.cu  hello_cuda.cpp  jpeg_bench.cpp  jpeg_compare.cpp  jpeg_diag.cpp  real_jpeg_bench.cpp  synthetic_test.cpp
